corrected spacing issues at top and bottom of screen, linked links at the top to different sections of the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,20 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
+
 body {
   background-color: #FFF;
-  margin: 0 auto;
-  padding
+  margin: 0 0%;
+  padding: 0;
 }
+
+
 
 .main-header {
   background-color: #FAFAFA;
@@ -11,6 +23,13 @@ body {
   margin-top: 0;
   padding-bottom: 25px;
 }
+
+.nav {
+  width: auto;
+  width: 100%;
+}
+
+
 .about-me, footer {
   background-color: #FAFAFA
 }
@@ -42,7 +61,7 @@ h1 {
   margin-bottom: 5px;
   margin-left: 0px;
   text-align: center;
-  font-size: 20px;
+  font-size: 23px;
   font-family: 'Cuprum', sans-serif;
   height: 15px;
   display: block;
@@ -61,6 +80,8 @@ p {
   font-size: 25px;
   font-family: 'Cuprum', sans-serif;
   font-weight: lighter;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 h2 {
@@ -84,13 +105,15 @@ h3 {
 h4 {
   font-size: 1.5em;
   font-weight: bold;
+
 }
 
 H5 {
   font-size: 1.2em;
   display: inline-block;
-  position: absolute;
-  right: 15px;
+float: right;
+padding-right: 15px;
+
 }
 
 img {
@@ -122,6 +145,10 @@ img {
   padding-bottom: 0;
 } */
 
+.about-me h4 {
+  text-align: center;
+}
+
 footer h4 {
   display: inline-block;
   padding-left: 15px;
@@ -136,6 +163,7 @@ a {
 .wrapper {
   width: 90%;
   margin: 0 auto;
+
 }
 
 hr {
@@ -145,4 +173,7 @@ hr {
   border: solid 2px rgb(242,242,242);
 width: 95%;
 margin: 0 auto;
+}
+
+footer {
 }
